# PulseNotes

./: .gitignore  README.md  requirements.txt
backend/: .env  Architecture.md  BE_README.md  main.py  pulsenotes-backend.spec  pyproject.toml  run_backend.py
backend/app/controllers/: base_controller.py  controllers.py  model_controller.py  model_selection_controller.py  summarization_controller.py  transcription_controller.py
backend/app/dtos/: delete_response_dto.py  download_response_dto.py  error_dto.py  model_availability_dto.py  success_dto.py
backend/app/enums/: ErrorMessageEnum.py
backend/app/models/: base_models.py  transcription_adapters.py
backend/app/models/asr/: base_asr_interface.py
backend/app/models/llm/: base_llm_interface.py
backend/app/registry/: model_registry.py
backend/app/services/: export_service.py  model_selection_service.py  model_services.py  summarization_service.py  test.py  transcription_service.py
backend/app/services/agents/: base_agent.py  summarization_agent.py
backend/app/services/audio/: audio_capture_service.py  audio_preprocessing_service.py
backend/app/tests/test_data/: 10min_convo.txt  15min_convo.txt  20min_convo.txt  2min_convo.txt  5min_convo.txt
backend/app/tests/test_endpoints/: test_model_contoller_endpoint.py
backend/app/tests/test_language_models/: test_llamacpp.py
backend/app/tests/test_models/: test_llamacpp.py
backend/app/tests/test_services/: test_model_selection_service.py  test_model_services.py  test_summarization_service.py
backend/app/utils/: utils.py
frontend/: .env  electron.js  (+3 more)
(+41 files in other folders)
